# cpp_gui_starting_project

./: .clang-format  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
src/qt/: CMakeLists.txt  DataSample.cpp  DataSample.hpp  main.cpp  readme.txt
src/qt/ui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  dialog.ui
src/zmq/: CMakeLists.txt  client.cpp  server.cpp
